<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#3DD8FF"
    android:orientation="vertical"

    tools:context="mobilecv.csinc.com.mobilecv.Contact">

    <TextView android:text="@string/head_activity_contact" android:layout_width="180dp"
        android:layout_marginLeft="20dp"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_height="50dp" />
    <TextView android:text="@string/contact_activity_reachmetxt" android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:textSize="15dp"
        android:textColor="#000000"

        android:layout_height="25dp" />

<Button
    style="@style/ButtonTheme"
    android:id="@+id/mail_send_btn"
    android:text="@string/mail_send_btn_txt"
    />
    <Button
        style="@style/ButtonTheme"
        android:id="@+id/linked_in_button"
        android:text="@string/linked_in_btn_txt"
         />
    <Button
        style="@style/ButtonTheme"
        android:id="@+id/web_site_btn"
        android:text="@string/web_site_btn_txt"
        />
</LinearLayout>
