<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#3DD8FF"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp">
        <TextView android:text="@string/hello_world" android:layout_width="180dp"

            android:layout_marginLeft="20dp"

            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_height="100dp" />
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="120dp"
            android:src="@drawable/caner_resim"
            android:layout_height="100dp" />
        </LinearLayout>

    <Button
        style="@style/ButtonTheme"
         android:text="@string/btn_activity_about_me"
         android:id="@+id/aboutme" />
    <Button
        android:text="@string/btn_activity_contact"
        style="@style/ButtonTheme"
        android:id="@+id/contact" />
    <Button
        android:text="@string/btn_activity_online_cv"
        style="@style/ButtonTheme"
    android:id="@+id/online" />
    <Button
        android:text="@string/btn_activity_projects"
        style="@style/ButtonTheme"
       android:id="@+id/projects" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:src="@drawable/android"
            android:maxWidth="100dp"
            android:layout_height="90dp" />
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:maxWidth="100dp"
            android:src="@drawable/dotnet"
            android:layout_height="90dp" />
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:maxWidth="90dp"

            android:src="@drawable/java"
            android:layout_height="80dp" />
        </LinearLayout>
</LinearLayout>
